# python-dx

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: gh-pages.yml
source/: conf.py  index.rst  robots.txt
source/advanced/: index.rst
source/deployment/: index.rst
source/faq/: index.rst  no_python_senior.rst
source/observability/: index.rst
source/performance/: index.rst
source/productivity/: ide-vscode.rst  index.rst
source/task-queue/: index.rst
